#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([DFMS], [1.0], [t657645537@126.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
# AC_CONFIG_SRCDIR([PluginManager/PluginManager.cc])
AC_CONFIG_HEADERS([config.h])

LT_INIT


# Checks for programs.
# Add when link -lglog
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET
# AC_PROG_LIBTOOL(glog)
AC_PROG_RANLIB
# AC_PROG_LIBTOOL(boost)
# AC_PROG_LIBTOOL(boost_system)
# AC_PROG_LIBTOOL(boost_thread)

# Checks for libraries.
# AC_CHECK_LIB([glog], [main])
# AC_CHECK_LIB([boost], [main])
# AC_CHECK_LIB([boost_system], [main])
# AC_CHECK_LIB([boost_thread], [main])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
